--- a/1_genome/lambda_learning_DeepLearning_5_features_test.ipynb
+++ b/1_genome/lambda_learning_DeepLearning_5_features_test.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x29857fbf390>"
+       "<torch._C.Generator at 0x2705a303d30>"
       ]
      },
      "execution_count": 1,
@@ -44,6 +44,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hyper parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chosen feature for training\n",
+    "chosen_feature = ['std_deviation', 'count', 'sum_diff', 'range_value', 'abs_skewness']\n",
+    "\n",
+    "# hyper para in cv\n",
+    "cv_batch_size = 8\n",
+    "cv_n_folds    = 2\n",
+    "cv_n_ites     = 100\n",
+    "\n",
+    "# batch size in training\n",
+    "train_batch_size = 1\n",
+    "\n",
+    "# learning rate in cv and training\n",
+    "lr = 0.001\n",
+    "\n",
+    "# hyper parameters\n",
+    "n_hiddens_values  = [1, 2, 3]\n",
+    "layer_size_values = [4, 8, 16]\n",
+    "\n",
+    "configs = [{'n_hiddens': 0, 'layer_size': 0}]\n",
+    "configs += [{'n_hiddens': n, 'layer_size': s} for n in n_hiddens_values for s in layer_size_values]\n",
+    "\n",
+    "# getting dataframe of error count\n",
+    "err_fold1_df = pd.read_csv('1_training_data/errors_fold1_base_10.csv')\n",
+    "err_fold2_df = pd.read_csv('1_training_data/errors_fold2_base_10.csv')\n",
+    "\n",
+    "# getting sequences and labels data\n",
+    "seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('0_sequences_labels/labels.gz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Process Features and Targets"
    ]
   },
@@ -56,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,17 +112,16 @@
    ],
    "source": [
     "# Chose features\n",
-    "chosen_feature = ['std_deviation', 'count', 'sum_diff', 'range_value', 'abs_skewness']\n",
-    "feature_input_size = len(chosen_feature)\n",
     "X = pd.read_csv('1_training_data/seq_features.csv').iloc[:, 1:][chosen_feature].to_numpy()\n",
     "\n",
     "# verify feature input size\n",
+    "feature_input_size = len(chosen_feature)\n",
     "print(feature_input_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,34 +315,6 @@
     "\n",
     "# verify shape\n",
     "print(target_fold1.shape, target_fold2.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Filter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # filter infinity\n",
-    "# idx_fold1 = [idx for idx, item in enumerate(target_fold1) if item[0] > -torch.inf and item[1] < torch.inf]\n",
-    "# idx_fold2 = [idx for idx, item in enumerate(target_fold2) if item[0] > -torch.inf and item[1] < torch.inf]\n",
-    "\n",
-    "# features_fold1 = features[idx_fold1]\n",
-    "# features_fold2 = features[idx_fold2]\n",
-    "\n",
-    "# target_fold1 = target_fold1[idx_fold1]\n",
-    "# target_fold2 = target_fold2[idx_fold2]\n",
-    "\n",
-    "# # test size of each training fold\n",
-    "# print(len(features_fold1), len(target_fold1))\n",
-    "# print(len(features_fold2), len(target_fold2))"
    ]
   },
   {
@@ -407,7 +421,7 @@
     "\n",
     "        # Create DataLoader\n",
     "        dataset    = TensorDataset(X_train, y_train)\n",
-    "        dataloader = DataLoader(dataset, batch_size=1, shuffle=True)\n",
+    "        dataloader = DataLoader(dataset, batch_size=cv_batch_size, shuffle=True)\n",
     "\n",
     "        # Define your model\n",
     "        model = DLModel(feature_input_size, n_hiddens, layer_size)\n",
@@ -444,7 +458,7 @@
     "    if(show_plot == True):\n",
     "        plot_loss(total_train_losses/n_splits, total_val_losses/n_splits, best_no_ite, 'subtrain', 'val')\n",
     "    \n",
-    "    return best_no_ite+1"
+    "    return best_no_ite + 1"
    ]
   },
   {
@@ -567,7 +581,7 @@
     "\n",
     "    # Create DataLoader\n",
     "    dataset    = TensorDataset(X, y)\n",
-    "    dataloader = DataLoader(dataset, batch_size=1, shuffle=True)\n",
+    "    dataloader = DataLoader(dataset, batch_size=train_batch_size, shuffle=True)\n",
     "\n",
     "    # Training loop\n",
     "    for _ in range(n_ites):\n",
@@ -599,6 +613,16 @@
     "        ldas1 = [round(num*2)/2 for num in ldas1]\n",
     "        ldas2 = [round(num*2)/2 for num in ldas2]\n",
     "\n",
+    "        ldas1 = np.array(ldas1)\n",
+    "        ldas2 = np.array(ldas2)\n",
+    "\n",
+    "        # max and min of lambda\n",
+    "        ldas1 = np.where(ldas1 > 5.0, 5.0, ldas1)\n",
+    "        ldas1 = np.where(ldas1 < -5.0, -5.0, ldas1)\n",
+    "\n",
+    "        ldas2 = np.where(ldas2 > 5.0, 5.0, ldas2)\n",
+    "        ldas2 = np.where(ldas2 < -5.0, -5.0, ldas2)\n",
+    "\n",
     "        # get err\n",
     "        fold1_err = err_fold1_df.iloc[i][str(ldas1[i])]\n",
     "        fold2_err = err_fold2_df.iloc[i][str(ldas2[i])]\n",
@@ -621,11 +645,14 @@
     "    n_hiddens  = config['n_hiddens']\n",
     "    layer_size = config['layer_size']\n",
     "\n",
-    "    best_no_ite_1 = cv_learn(2, X1, y1, n_hiddens, layer_size, False, 0.001, 100)\n",
-    "    best_no_ite_2 = cv_learn(2, X2, y2, n_hiddens, layer_size, False, 0.001, 100)\n",
+    "    # best_no_ite_1 = cv_learn(cv_n_folds, X1, y1, n_hiddens, layer_size, False, lr, cv_n_ites)\n",
+    "    # best_no_ite_2 = cv_learn(cv_n_folds, X2, y2, n_hiddens, layer_size, False, lr, cv_n_ites)\n",
     "\n",
-    "    model1 = train_model(X1, y1, n_hiddens, layer_size, 0.001, best_no_ite_1)\n",
-    "    model2 = train_model(X2, y2, n_hiddens, layer_size, 0.001, best_no_ite_2)\n",
+    "    # model1 = train_model(X1, y1, n_hiddens, layer_size, lr, best_no_ite_1)\n",
+    "    # model2 = train_model(X2, y2, n_hiddens, layer_size, lr, best_no_ite_2)\n",
+    "\n",
+    "    model1 = train_model(X1, y1, n_hiddens, layer_size, lr, 500)\n",
+    "    model2 = train_model(X2, y2, n_hiddens, layer_size, lr, 500)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        ldas1 = model1(full_X).numpy().reshape(-1)\n",
@@ -641,85 +668,46 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[{'n_hiddens': 0, 'layer_size': 0}, {'n_hiddens': 1, 'layer_size': 4}, {'n_hiddens': 1, 'layer_size': 8}, {'n_hiddens': 1, 'layer_size': 16}, {'n_hiddens': 2, 'layer_size': 4}, {'n_hiddens': 2, 'layer_size': 8}, {'n_hiddens': 2, 'layer_size': 16}, {'n_hiddens': 3, 'layer_size': 4}, {'n_hiddens': 3, 'layer_size': 8}, {'n_hiddens': 3, 'layer_size': 16}]\n"
+      "[Parallel(n_jobs=10)]: Using backend LokyBackend with 10 concurrent workers.\n",
+      "[Parallel(n_jobs=10)]: Done   2 out of  10 | elapsed:  9.3min remaining: 37.3min\n",
+      "[Parallel(n_jobs=10)]: Done  10 out of  10 | elapsed: 13.3min finished\n"
      ]
     }
    ],
    "source": [
-    "# Define the values for n_hiddens and layer_size\n",
-    "n_hiddens_values  = [1, 2, 3]\n",
-    "layer_size_values = [4, 8, 16]\n",
-    "\n",
-    "# Create a list of dictionaries\n",
-    "configs = [{'n_hiddens': 0, 'layer_size': 0}]\n",
-    "configs += [{'n_hiddens': n, 'layer_size': s} for n in n_hiddens_values for s in layer_size_values]\n",
-    "\n",
-    "# print configs\n",
-    "print(configs)"
+    "torch.manual_seed(0)\n",
+    "dfs = Parallel(n_jobs=len(configs), verbose=1)(delayed(try_model)(features, features, features, target_fold1, target_fold2,\n",
+    "                                                        configs[i], err_fold1_df, err_fold2_df, seqs, labels) for i in range(len(configs)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# getting dataframe of error count\n",
-    "err_fold1_df = pd.read_csv('1_training_data/errors_fold1_base_10.csv')\n",
-    "err_fold2_df = pd.read_csv('1_training_data/errors_fold2_base_10.csv')\n",
-    "\n",
-    "# getting sequences and labels data\n",
-    "seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
-    "labels = gen_data_dict('0_sequences_labels/labels.gz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=10)]: Using backend LokyBackend with 10 concurrent workers.\n",
-      "[Parallel(n_jobs=10)]: Done   2 out of  10 | elapsed:  2.4min remaining:  9.8min\n",
-      "[Parallel(n_jobs=10)]: Done  10 out of  10 | elapsed:  2.9min finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "torch.manual_seed(0)\n",
-    "dfs = Parallel(n_jobs=10, verbose=1)(delayed(try_model)(features, features, features, target_fold1, target_fold2,\n",
-    "                                                        configs[i], err_fold1_df, err_fold2_df, seqs, labels) for i in range(len(configs)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_hiddens: 0 \t layer_size:  0 \t fold1.test: 79.52 \t fold2.test: 74.04\n",
-      "n_hiddens: 1 \t layer_size:  4 \t fold1.test: 78.46 \t fold2.test: 78.08\n",
-      "n_hiddens: 1 \t layer_size:  8 \t fold1.test: 77.93 \t fold2.test: 80.00\n",
-      "n_hiddens: 1 \t layer_size: 16 \t fold1.test: 79.52 \t fold2.test: 79.42\n",
-      "n_hiddens: 2 \t layer_size:  4 \t fold1.test: 79.12 \t fold2.test: 79.23\n",
-      "n_hiddens: 2 \t layer_size:  8 \t fold1.test: 78.59 \t fold2.test: 77.69\n",
-      "n_hiddens: 2 \t layer_size: 16 \t fold1.test: 79.12 \t fold2.test: 77.88\n",
-      "n_hiddens: 3 \t layer_size:  4 \t fold1.test: 73.54 \t fold2.test: 75.00\n",
-      "n_hiddens: 3 \t layer_size:  8 \t fold1.test: 78.59 \t fold2.test: 73.65\n",
-      "n_hiddens: 3 \t layer_size: 16 \t fold1.test: 77.79 \t fold2.test: 78.27\n"
+      "   n_hiddens  layer_size  fold1_test  fold2_test\n",
+      "0          0           0   78.989362   80.000000\n",
+      "1          1           4   78.723404   82.115385\n",
+      "2          1           8   80.319149   80.769231\n",
+      "3          1          16   81.515957   81.730769\n",
+      "4          2           4   78.590426   81.730769\n",
+      "5          2           8   79.787234   84.038462\n",
+      "6          2          16   81.117021   85.000000\n",
+      "7          3           4   78.457447   80.961538\n",
+      "8          3           8   80.718085   84.038462\n",
+      "9          3          16   81.117021   86.730769\n"
      ]
     }
    ],
    "source": [
+    "results = []\n",
     "for i in range(len(dfs)):\n",
     "    df = dfs[i]\n",
     "    \n",
@@ -730,8 +718,38 @@
     "    rate1 = (total_label_fold1 - err1)/total_label_fold1\n",
     "    rate2 = (total_label_fold2 - err2)/total_label_fold2\n",
     "\n",
-    "    print(\"n_hiddens: %1d \\t layer_size: %2d \\t fold1.test: %5.2f \\t fold2.test: %5.2f\" % \n",
-    "        (configs[i]['n_hiddens'], configs[i]['layer_size'], rate1*100, rate2*100))"
+    "    results.append({\n",
+    "        'n_hiddens': configs[i]['n_hiddens'],\n",
+    "        'layer_size': configs[i]['layer_size'],\n",
+    "        'fold1_test': rate1 * 100,\n",
+    "        'fold2_test': rate2 * 100\n",
+    "    })\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n",
+    "print(df_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average fold1_test: 79.93\n",
+      "Average fold2_test: 82.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the average of fold1_test and fold2_test\n",
+    "fold1_test_avg = df_results['fold1_test'].mean()\n",
+    "fold2_test_avg = df_results['fold2_test'].mean()\n",
+    "\n",
+    "print(\"Average fold1_test: %.2f\" % fold1_test_avg)\n",
+    "print(\"Average fold2_test: %.2f\" % fold2_test_avg)"
    ]
   }
  ],
