--- a/1_genome/lambda_learning_RNN.ipynb
+++ b/1_genome/lambda_learning_RNN.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x2497ef13d10>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -22,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +41,8 @@
     "seqs = gen_data_dict('0_sequences_labels/signals.gz')\n",
     "\n",
     "# target\n",
-    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_e.csv')\n",
-    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_e.csv')\n",
+    "target_df_1 = pd.read_csv('1_training_data/target_lambda_fold1_base_10.csv')\n",
+    "target_df_2 = pd.read_csv('1_training_data/target_lambda_fold2_base_10.csv')\n",
     "\n",
     "targets_low_1  = target_df_1.iloc[:, 1:2].to_numpy()\n",
     "targets_high_1 = target_df_1.iloc[:, 2:3].to_numpy()\n",
@@ -43,39 +54,39 @@
     "targets_low_2  = torch.FloatTensor(targets_low_2)\n",
     "targets_high_2 = torch.FloatTensor(targets_high_2)\n",
     "\n",
-    "y1_raw = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
-    "y2_raw = torch.cat((targets_low_2, targets_high_2), dim=1)"
+    "y1 = torch.cat((targets_low_1, targets_high_1), dim=1)\n",
+    "y2 = torch.cat((targets_low_2, targets_high_2), dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter\n",
-    "idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X1 = [seqs[i] for i in idx_fold1]\n",
-    "y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
+    "# # filter\n",
+    "# idx_fold1 = [idx for idx, item in enumerate(y1_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
+    "# X1 = [seqs[i] for i in idx_fold1]\n",
+    "# y1 = torch.mean(y1_raw[idx_fold1], axis=1).reshape(-1,1)\n",
     "\n",
-    "idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
-    "X2 = [seqs[i] for i in idx_fold2]\n",
-    "y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
+    "# idx_fold2 = [idx for idx, item in enumerate(y2_raw) if item[0] > -np.inf and item[1] < np.inf]\n",
+    "# X2 = [seqs[i] for i in idx_fold2]\n",
+    "# y2 = torch.mean(y2_raw[idx_fold2], axis=1).reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(X1), len(X2))\n",
-    "print(len(y1), len(y2))"
+    "# print(len(X1), len(X2))\n",
+    "# print(len(y1), len(y2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,15 +206,16 @@
     "\n",
     "        # # plot\n",
     "        # plot_loss(train_losses, val_losses, train_set_name='subtrain', test_set_name='val')\n",
-    "\n",
-    "    best_no_ite = int(np.mean(best_ites))\n",
-    "    \n",
-    "    return best_no_ite"
+    "    try:\n",
+    "        best_no_ite = int(np.mean(best_ites))\n",
+    "        return best_no_ite\n",
+    "    finally:\n",
+    "        return 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +228,7 @@
     "    for _ in range(n_ites):\n",
     "        for i in range(len(X)):\n",
     "            optimizer.zero_grad()\n",
-    "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1, 1)\n",
+    "            seq = torch.Tensor(seqs[i][1]['logratio'].to_numpy()).reshape(-1, 1)\n",
     "            output = model(seq)\n",
     "            loss = loss_func(output[0], y[i])\n",
     "            loss.backward()\n",
@@ -227,33 +239,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_df_stat(ldas1, ldas2, seqs, labels):\n",
-    "    header = ['sequenceID', 'log_lambda_test_fold1', 'log_lambda_test_fold2', 'fold_1_total_labels', 'fold_2_total_labels', 'fold_1_fp_errs', 'fold_1_fn_errs', 'fold_1_tp', 'fold_1_tn', 'fold_2_fp_errs', 'fold_2_fn_errs', 'fold_2_tp', 'fold_2_tn']\n",
+    "def get_df_stat(ldas1, ldas2, err_fold1_df, err_fold2_df, seqs, labels):\n",
+    "    header = ['sequenceID', 'lda_fold1', 'lda_fold2', 'fold_1_total_labels', 'fold_2_total_labels', 'fold1_err', 'fold2_err']\n",
     "    rows = []\n",
     "    for i in range(len(seqs)):\n",
-    "        # generate data\n",
-    "        sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(i, seqs=seqs, labels=labels)\n",
-    "\n",
     "        # get total labels\n",
+    "        _, neg_start_1, _, pos_start_1, _, neg_start_2, _, pos_start_2, _ = get_data(i, seqs, labels)\n",
     "        fold1_total_labels = len(neg_start_1) + len(pos_start_1)\n",
     "        fold2_total_labels = len(neg_start_2) + len(pos_start_2)\n",
     "\n",
-    "        # run each lambda and record it into csv file\n",
-    "        row  = [seqs[i][0], ldas2[i], ldas1[i], fold1_total_labels, fold2_total_labels]\n",
+    "        # round lambda\n",
+    "        ldas1 = [round(num*2)/2 for num in ldas1]\n",
+    "        ldas2 = [round(num*2)/2 for num in ldas2]\n",
     "\n",
-    "        chpnt_fold1 = opart(np.exp(ldas2[i]), sequence)\n",
-    "        chpnt_fold2 = opart(np.exp(ldas1[i]), sequence)\n",
-    "\n",
-    "        err_1 = error_count(chpnt_fold1, neg_start_1, neg_end_1, pos_start_1, pos_end_1)\n",
-    "        err_2 = error_count(chpnt_fold2, neg_start_2, neg_end_2, pos_start_2, pos_end_2)\n",
+    "        # get err\n",
+    "        fold1_err = err_fold1_df.iloc[i][str(ldas1[i])]\n",
+    "        fold2_err = err_fold2_df.iloc[i][str(ldas2[i])]\n",
     "        \n",
-    "        for err in [err_1, err_2]:\n",
-    "            row.extend(err[:4])\n",
-    "\n",
+    "        # add row to rows\n",
+    "        row = [seqs[i][0], ldas1[i], ldas2[i], fold1_total_labels, fold2_total_labels, fold1_err, fold2_err]\n",
     "        rows.append(row)\n",
     "    \n",
     "    df = pd.DataFrame(rows, columns=header)\n",
@@ -262,48 +270,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def try_model(X1, X2, y1, y2, seqs, config):\n",
+    "def try_model(X1, X2, y1, y2, config, err_fold1_df, err_fold2_df, seqs, labels):\n",
     "    n_hiddens  = config['n_hiddens']\n",
     "    layer_size = config['layer_size']\n",
     "    n_features = config['n_features']\n",
     "\n",
-    "    best_no_ite_1 = cv_learn(X1, y1, n_features, n_hiddens, layer_size)\n",
-    "    best_no_ite_2 = cv_learn(X2, y2, n_features, n_hiddens, layer_size)\n",
+    "    # best_no_ite_1 = cv_learn(X1, y1, n_features, n_hiddens, layer_size)\n",
+    "    # best_no_ite_2 = cv_learn(X2, y2, n_features, n_hiddens, layer_size)\n",
     "\n",
-    "    print(\"done 1\")\n",
+    "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, 2)\n",
+    "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, 2)\n",
     "\n",
-    "    model1 = train_model(X1, y1, n_features, n_hiddens, layer_size, best_no_ite_1)\n",
-    "    model2 = train_model(X2, y2, n_features, n_hiddens, layer_size, best_no_ite_2)\n",
-    "\n",
-    "    print(\"done 2\")\n",
-    "\n",
-    "    torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
-    "    torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model1.state_dict(), '3_learned_models/3_rnn/model1_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
+    "    # torch.save(model2.state_dict(), '3_learned_models/3_rnn/model2_' + str(n_features) + '_' + str(n_hiddens) + '_' + str(layer_size) + '.pth')\n",
     "\n",
     "    ldas1 = np.zeros(len(seqs))\n",
     "    ldas2 = np.zeros(len(seqs))\n",
     "    with torch.no_grad():\n",
     "        for i in range(len(seqs)):\n",
-    "            seq = torch.tensor(seqs[i][1]['logratio'].to_numpy(), dtype=torch.float32).reshape(-1,1)\n",
+    "            seq = torch.Tensor(seqs[i][1]['logratio'].to_numpy()).reshape(-1,1)\n",
     "            ldas1[i] = model1(seq).numpy()[0][0]\n",
     "            ldas2[i] = model2(seq).numpy()[0][0]\n",
-    "    \n",
-    "    print(\"done 3\")\n",
-    "    \n",
-    "    seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
-    "    labels = gen_data_dict('0_sequences_labels/labels.gz')\n",
-    "    df = get_df_stat(ldas1, ldas2, seqs, labels)\n",
     "\n",
+    "    df = get_df_stat(ldas1, ldas2, err_fold1_df, err_fold2_df, seqs, labels)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs = Parallel(n_jobs=32)(delayed(try_model)(X1, X2, y1, y2, seqs, configs[i]) for i in range(0, len(configs)))"
+    "# getting dataframe of error count\n",
+    "err_fold1_df = pd.read_csv('1_training_data/errors_fold1_base_10.csv')\n",
+    "err_fold2_df = pd.read_csv('1_training_data/errors_fold2_base_10.csv')\n",
+    "\n",
+    "# getting sequences and labels data\n",
+    "seqs   = gen_data_dict('0_sequences_labels/signals.gz')\n",
+    "labels = gen_data_dict('0_sequences_labels/labels.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = Parallel(n_jobs=32)(delayed(try_model)(seqs, seqs, y1, y2, configs[i], err_fold1_df, err_fold2_df, seqs, labels) for i in range(0, len(configs)))"
    ]
   },
   {
